--- a/eCareIS/pom.xml
+++ b/eCareIS/pom.xml
@@ -65,6 +65,12 @@
       <!--<scope>compile</scope>-->
     </dependency>
 
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
+
   </dependencies>
 
   <build>
