basic authentification added

--- a/eCareIS/src/main/webapp/WEB-INF/web.xml
+++ b/eCareIS/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_1.xsd">
 
-    <display-name>My app</display-name>
+    <display-name>eCare</display-name>
+    <welcome-file-list>
+        <welcome-file>login.jsp</welcome-file>
+    </welcome-file-list>
+
 
 </web-app>
