--- a/eCareIS_II/src/main/webapp/WEB-INF/web.xml
+++ b/eCareIS_II/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,27 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>auditFilter</filter-name>
+        <filter-class>
+            org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
+        <init-param>
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>appName</param-name>
+            <param-value>di-example</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>auditFilter</filter-name>
+        <url-pattern>/app/*</url-pattern>
+    </filter-mapping>
+
+
     <persistence-context-ref>
         <persistence-context-ref-name>hello/EntityManager</persistence-context-ref-name>
         <persistence-unit-name>helloPU</persistence-unit-name>
