migration on spring mvc is going on

--- a/eCareIS_II/src/main/resources/log4j.properties
+++ b/eCareIS_II/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, toConsole, toFile
+log4j.rootLogger=info, toConsole, toFile
 
 # Direct log messages to stdout
 log4j.appender.toConsole=org.apache.log4j.ConsoleAppender
