--- a/eCareIS_II/src/main/webapp/WEB-INF/web.xml
+++ b/eCareIS_II/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 
     <display-name>eCare</display-name>
     <welcome-file-list>
-        <welcome-file>login.jsp</welcome-file>
+        <welcome-file>new.jsp</welcome-file>
     </welcome-file-list>
 
     <context-param>
