--- a/RESTClient/pom.xml
+++ b/RESTClient/pom.xml
@@ -5,7 +5,7 @@
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mkyong.common</groupId>
-  <artifactId>JSF_combolists</artifactId>
+  <artifactId>eCare_client</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>JavaServerFaces Maven Webapp</name>
@@ -157,7 +157,7 @@
 
   
   <build>
-    <finalName>JSF_combolists</finalName>
+    <finalName>eCare_client</finalName>
     
     <plugins>
        <plugin>
