--- a/eCareIS_II/pom.xml
+++ b/eCareIS_II/pom.xml
@@ -80,8 +80,8 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <version>4.12</version>
+      <!--<scope>test</scope>-->
     </dependency>
 
     <dependency>
@@ -204,11 +204,24 @@
       <version>4.1.6.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>4.1.6.RELEASE</version>
+    </dependency>
+
 <!--others-->
     <dependency>
       <groupId>aopalliance</groupId>
       <artifactId>aopalliance</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.10.19</version>
+    </dependency>
+
 
     <!--<dependency>-->
       <!--<groupId>org.hibernate</groupId>-->
