--- a/eCareIS_II/pom.xml
+++ b/eCareIS_II/pom.xml
@@ -262,6 +262,35 @@
           <path>\eCareIS</path>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <formats>
+            <format>html</format>
+            <format>xml</format>
+          </formats>
+          <instrumentation>
+          </instrumentation>
+          <check>
+            <regex>
+              <pattern>service.*</pattern>
+              <branchRate>100</branchRate>
+              <lineRate>100</lineRate>
+            </regex>
+          </check>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>clean</goal>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
