--- a/RESTClient/pom.xml
+++ b/RESTClient/pom.xml
@@ -140,6 +140,11 @@
           <version>5.5.6</version>
           <!--<scope>compile</scope>-->
       </dependency>
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.17</version>
+      </dependency>
 
 
 
