--- a/RESTClient/pom.xml
+++ b/RESTClient/pom.xml
@@ -146,6 +146,27 @@
           <version>1.2.17</version>
       </dependency>
 
+      <dependency>
+          <groupId>javax.enterprise</groupId>
+          <artifactId>cdi-api</artifactId>
+          <scope>provided</scope>
+      </dependency>
+
+      <!-- Import the Common Annotations API (JSR-250), we use provided scope
+          as the API is included in JBoss WildFly -->
+      <dependency>
+          <groupId>org.jboss.spec.javax.annotation</groupId>
+          <artifactId>jboss-annotations-api_1.2_spec</artifactId>
+          <scope>provided</scope>
+      </dependency>
+
+      <!-- Import the EJB API, we use provided scope as the API is included in JBoss WildFly -->
+      <dependency>
+          <groupId>org.jboss.spec.javax.ejb</groupId>
+          <artifactId>jboss-ejb-api_3.2_spec</artifactId>
+          <scope>provided</scope>
+      </dependency>
+
 
 
   </dependencies>
